--- a/web/styles/main.scss
+++ b/web/styles/main.scss
@@ -9,6 +9,8 @@
 @import "components/blocks";
 @import "components/modals";
 @import "components/cards";
+@import "components/extended";
+@import "components/forms";
 
 // pages
 @import "pages/homepage";
