--- a/templates/component/_block_footer.html
+++ b/templates/component/_block_footer.html
@@ -37,11 +37,14 @@
             </div>
             <form action="" class="inline">
                 <h1 class="text-light">Subscribe to our newsletter</h1>
-                <div class="d-flex">
+                <div class="d-flex mt-4">
                     <input type="text">
                     <input type="submit" value="Send" class="btn btn-light">
                 </div>
             </form>
         </div>
     </div>
+</div>
+<div class="text-center py-2 bg-dark-2">
+    <p class="text-light">© 2018 Copyright - All Rights Reseved Site By - Zikisa Cale Sogaxa</p>
 </div>
