--- a/templates/homepage/_block_homehero.html
+++ b/templates/homepage/_block_homehero.html
@@ -2,7 +2,9 @@
 	<div class="block-header row m-auto container py-5">
 		<div class="col-sm-7 mx-auto my-5 text-center">
 			<h1>{{ block.blockTitle }}</h1>
-			<input class="mt-4 btn btn-dark btn-lg" type="button" value="Shop Now" name="">
+			<a href="lookbook">
+				<input class="mt-4 btn btn-dark btn-lg" type="button" value="Shop Now" name="">
+			</a>
 		</div>
     	<div class="col-sm-5 m-auto text-center">
     		<img src="{{ block.heroHeaderImage.one.url }}" alt="">
