New images and syntax change on files

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -28,6 +28,8 @@
     </div>
 </div>
 
+{% include 'component/_block_nav.html' %}
+
 <body id="top">
 
     <main role="main" class="page-{{craft.app.request.segments|first}}">
