--- a/templates/homepage/_block_product_review.html
+++ b/templates/homepage/_block_product_review.html
@@ -1,6 +1,6 @@
 <div class="container text-center mt-120 mb-120 block-product-preview">
     <div class="d-flex justify-content-center">
-        {% for block in block.productImages %}
+        {% for block in block.productPreviews.limit(3) %}
             <a href="#" class="product mx-2" style="background-image: url('{{ block.productImage.one.url }}')">
                 <h1>{{ block.productTitle }}</h1>
             </a>
