--- a/web/styles/components/_nav.scss
+++ b/web/styles/components/_nav.scss
@@ -1,4 +1,5 @@
 .navbar {
+    
     width: 100%;
 
     a {
@@ -8,9 +9,14 @@
     	transition-duration: .1s;
     	border-bottom: solid 2px $transparent;
     	line-height: 1;
+
+        &:hover {
+            border-bottom: solid 2px $black;
+        }
+
+        &.active {
+            border-bottom: solid 2px $black;
+        }
     }
 
-    a:hover {
-    	border-bottom: solid 2px $black;
-    }
 }
