--- a/templates/component/_block_nav.html
+++ b/templates/component/_block_nav.html
@@ -9,10 +9,10 @@
         {% import "_macros.html" as macros %}
 
         <li class="nav-item mx-4 pb-0">
-            <a class="nav-link {{ macros.is_active('women') }}" href="{{ url('for-women') }}" title="For Women">For Women</a>
+            <a class="nav-link {{ macros.is_active('for-women') }}" href="{{ url('for-women') }}" title="For Women">For Women</a>
         </li>
         <li class="nav-item mx-4 pb-0">
-            <a class="nav-link {{ macros.is_active('men') }}" href="{{ url('for-men') }}" title="For Men">For Men</a>
+            <a class="nav-link {{ macros.is_active('for-men') }}" href="{{ url('for-men') }}" title="For Men">For Men</a>
         </li>
         <li class="nav-item mx-4 pb-0">
             <a class="nav-link {{ macros.is_active('accessories') }}" href="{{ url('accessories') }}" title="Accessories">Accessories</a>
